--- a/app/templates/clients.html
+++ b/app/templates/clients.html
@@ -13,9 +13,12 @@
 {%- endif -%}
 {%- endmacro %}
 
+<div class="page-header">
+    <h1 class="page-header__title">Clients</h1>
+</div>
+
 <div class="card">
     <div class="card__header">
-        <h1 class="card__title">Clients</h1>
         <div class="card__header-actions">
             <button class="btn" onclick="window.location.href='/ledger/'">
                 <span class="btn__label">
